# lite-email-parser

./: .gitignore  NOTICE  README.md  package-lock.json  package.json
.github/workflows/: prebuild.yml  publish-platforms.yml  publish-python.yml
core/: Makefile
core/include/: html_extractor.h  html_parser.h
core/samples/: sample.cpp
core/src/: html_extractor.cpp  html_parser.cpp
node/: .gitignore  binding.gyp  package-lock.json  package.json  tsconfig.json
node/samples/: sample.ts  tsconfig.json
node/src/: addon.cpp  index.cts  index.ts  types.ts
python/: LICENSE  MANIFEST.in  pyproject.toml  setup.py
python/lite_email_parser/: __init__.py  __init__.pyi
python/samples/: sample.py
python/src/: python_bindings.cpp
sample/: sample.ts
samples/: gmail.eml  proton.eml  thunderbird.eml
src/: html_extractor.cpp  html_extractor.h  index.ts  parser.cpp  parser.ts
